# AppVers

./: .gitignore  readme.md  version.json  version.ps1
CS/: version.cs  versoin_cs.md
PHP/: readme_php.md  version.php
PYTHON/: readme_py.md  version.cmd  version.py
RUST/: Cargo.toml  readme_rs.md
RUST/src/: version.rs
