[package]
name = "version-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0" # Now the compiler knows about thiserror

# The presence of this [[bin]] section OR a src/main.rs file
# tells Cargo to build a binary.
[[bin]]
name = "Version"
path = "src/version.rs"